# breakpad-lite

./: README.md
.github/workflows/: breakpad-win.yml  build-with-docker.yml  main-with-arm.yml  release-pkg.yml
breakpad_build4w/: CMakeLists.txt  ConsoleApplicationTest.cpp  Readme.md  breakpadlite.cpp  breakpadlite.h
src/: CMakeLists.txt  breakpadlite.cpp  breakpadlite.h
src/test/: CMakeLists.txt  main.cpp
